[package]
name = "disas"
description = "Disassembler"
version = "0.1.1"
license = "GPL-3.0-only"
keywords = ["disassembler"]
authors = ["Denis Drakhnia <numas13@gmail.com>"]
repository = "https://github.com/numas13/disas"
edition = "2021"
rust-version = "1.70"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["all-arch", "block-buffering", "parallel"]
block-buffering = []
parallel = []

riscv = ["disasm/riscv"]
x86 = ["disasm/x86"]
all-arch = [
    "riscv",
    "x86",
]

[dependencies]
object = "0.34"
disasm = { version = "0.3.4", features = ["std", "print"] }
bpaf = { version = "0.9", features = ["autocomplete", "dull-color"] }
log = "0.4.22"

[dependencies.env_logger]
version = "0.10.2"
default-features = false
features = ["auto-color", "humantime"]
